[package]
name = "mdbook-nix-repl"
version = "0.5.4"
edition = "2024"
authors = ["T. Sawyer saylesss88@github.com"]
license = "Apache-2.0"
description = "An mdBook preprocessor to provide nix-repl functionality within mdbook"
repository = "https://github.com/saylesss88/mdbook-nix-repl"
readme = "README.md"
keywords = ["mdbook", "nix", "repl", "preprocessor"]
categories = [
	"command-line-utilities",
	"development-tools::build-utils",
	"web-programming",
]
homepage = "https://github.com/saylesss88/mdbook-nix-repl"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENSE",
	"theme/nix_http.js",
	"server/Cargo.toml.inc",
	"server/Dockerfile",
	"server/src/**/*",
]

[dependencies]
mdbook-preprocessor = "0.5.1"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
html-escape = "0.2"
semver = "1"
clap = {version = "4", features = ["derive"]}
